JO-2008-02-22-0: Bugfix:   In SJWC on Oracle dates appear truncated to just MM/DD/YYYY
                           Row Limit in Simple Query uses wrong syntax
                 Bugster:  6661500, 6640762
                 Issue:    2503
                 Review:   AP

AP-2008-02-20-0: Bugfix:   ARCo reporting module installation script is broken 
                           on Red Hat Enterprise Linux 4 Update 4
                 Bugster:  6663741
                 Issue:    2498
                 Review:   JG

JO-2008-02-15-0: Bugfix:   Batch failure on Oracle database.
                 Bugster:  6659300
                 Review:   PJ

JO-2008-02-11-0: Bugfix:    Queries Average Job Turnaround Time and Average Job Wait Time irresponsive on MySQL
                 Bugster:   6661473
                 Review:    AP

AP-2008-02-06-0: Bugfix:    Correct the field name in dbwriter.xml for mysql 
                            to ju_exit_status

PJ-2008-01-31-0: Bugfix:    Sort on table column throws exception 
                            if explicit SORT specified in 
                            SimpleQuery Sort on table column
                 Bugfix:    ORDER BY clause ignored in Advanced Query
                 Bugster:   6549694,6598005 
                 Issue:     2344, 2354
                 Review:    JO

AP-2008-01-22-0: Bugfix:    deletion rule for PostgreSQL incorrect for deletion 
                            of sge_share_log
                 Bugster:   6653090
                 Issue:     2468
                 Review:    JO

AP-2008-01-16-0: Bugfix:    o Wrong variable for calculating daily host values from 
                              hourly ones
                            o DBW derived rules and reporting queries that count 
                              jobs need to be updated - updating views view_accounting, 
                              view_job_times, view_jobs_completed
                            o Updating queries, fixing sql statements, adding 