@@ -60,15 +60,5 @@ public class MysqlSQLGenerator extends AbstractSQLGenerator {
 
    protected String getSubSelectAlias() {
       return "as tmp";
-   }
-   
-   protected boolean needsTimeFormat(String field, QueryType query) {
-      return false;
-   }
-   
-   protected String formatTimeField(String fieldName) {
-      return fieldName;
-}
-   
-   
+   } 
 }
