@@ -31,60 +31,64 @@
 /*___INFO__MARK_END__*/
 package com.sun.grid.arco.sql;
 
+import com.sun.grid.arco.ArcoConstants;
+import com.sun.grid.arco.ArcoException;
 import java.util.logging.*;
 import junit.framework.*;
-import com.sun.grid.arco.ArcoConstants;
 import com.sun.grid.arco.model.*;
-import com.sun.grid.logging.SGELog;
 import com.sun.grid.arco.util.FieldFunction;
+import com.sun.grid.logging.SGELog;
+import java.io.File;
+import java.sql.SQLException;
 
 public class SQLGeneratorTest extends TestCase {
    
    private ObjectFactory faq;
    private SQLGenerator  gen;
+   private File arcoConfigFile; 
    
    public SQLGeneratorTest(String testName) {
       super(testName);
    }
-
+  
    protected void setUp() throws java.lang.Exception {
       faq = new ObjectFactory();
       gen = new OracleSQLGenerator();
+      initConfigFile();
       SGELog.init( Logger.global );
    }
-
+   
+   private void initConfigFile() {
+      // Setup the configuration file
+      String cf = "/ws/jo195647/sge61/default/arco/reporting";
+      arcoConfigFile = new File(cf + File.separator +"config.xml");
+   }
+   
    protected void tearDown() throws java.lang.Exception {
    }
    
    public void testSimple() throws Exception {      
-//      Query query = faq.createQuery();
-//      Field field = faq.createField();
-//      
-//      query.setTableName("table");
-//      query.setType(ArcoConstants.SIMPLE);
-//      field.setDbName("col");
-//      field.setFunction( FieldFunction.VALUE.getName() );
-//      field.setReportName("a col");
-//      query.getField().add(field);
-//      
-//      String sql = gen.generate(query, null);
-//      SGELog.fine("generated sql: ''{0}''", sql);
-//      assertEquals(sql, "SELECT col AS \"a col\" FROM table");
-//   }
-//
-//   public void testNoReportName() throws Exception {      
-//      Query query = faq.createQuery();
-//      Field field = faq.createField();
-//      
-//      query.setTableName("table");
-//      query.setType(ArcoConstants.SIMPLE);
-//      field.setDbName("col");
-//      field.setFunction( FieldFunction.VALUE.getName() );
-//      query.getField().add(field);
-//      
-//      String sql = gen.generate(query, null);
-//      SGELog.fine("generated sql: ''{0}''", sql);
-//      assertEquals(sql, "SELECT col AS \"col\" FROM table");
+      ArcoDbConnectionPool dbConnections = ArcoDbConnectionPool.getInstance();
+     
+      dbConnections.setConfigurationFile( arcoConfigFile );
+      try {
+         dbConnections.init();
+      } catch (SQLException sqle) {
+         throw new ArcoException("ArcoRun.poolError");
+      }
+      Query query = faq.createQuery();
+      Field field = faq.createField();
+      
+      query.setTableName("sge_job");
+      query.setType(ArcoConstants.SIMPLE);
+      field.setDbName("j_job_number");
+      field.setFunction( FieldFunction.VALUE.getName() );
+      field.setReportName("job_number");
+      query.getField().add(field);
+      
+      String sql = gen.generate(query, null);
+      SGELog.fine("generated sql: ''{0}''", sql);
+      assertEquals(sql, "SELECT j_job_number AS \"job_number\" FROM sge_job");
    }
 //   
 //   public void testRowLimit() throws Exception {
